# siteChatGPT

./: .env copy  .gitignore  README.md  compose.yaml
.devcontainer/: devcontainer.json
app/: Dockerfile  main.py  pyproject.toml
app/src/: app_manager.py  chat_magager.py
