[tool.poetry]
name = "python-dev-demo"
version = "0.1.0"
description = "python dev-container env"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
pydantic = "^1.10.4"
langchain = "^0.0.275"
qdrant-client = "^1.4.0"
scikit-learn = "^1.3.0"
optuna = "^3.3.0"
streamlit = "^1.26.0"
pandas = "^2.0.3"
japanize-matplotlib = "^1.1.3"
matplotlib = "^3.7.2"
openai = "^0.27.9"
bs4 = "^0.0.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
types-requests = "^2.31.0.2"
trafilatura = "^1.6.1"
tiktoken = "^0.4.0"
 
[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
poethepoet = "^0.18.1"
 
[tool.mypy]
allow_redefinition = false
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true



[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.poe.tasks.pytest]
shell = "pytest -v --cov=. --cov-branch"
interpreter = "bash"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"